--- a/app/src/main/res/layout/activity_nuevos_medicamentos.xml
+++ b/app/src/main/res/layout/activity_nuevos_medicamentos.xml
@@ -9,190 +9,173 @@
     tools:context=".activity_nuevos_medicamentos">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <EditText
+        android:id="@+id/txtNombreCitas"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_edittext_background"
+        android:ems="10"
+        android:fontFamily="@font/raleway_extrabold_italic"
+        android:inputType="text"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+    <TextView
+        android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:layout_marginStart="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/raleway_extrabold_italic"
+        android:text="Nombre del medicamento"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtNombreCitas"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/btnPacientes" />
 
-        <EditText
-            android:id="@+id/txtNombreCitas"
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/ic_edittext_background"
-            android:ems="10"
-            android:inputType="text"
-            android:textColor="#000000"
-            android:textSize="16sp"
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/raleway_extrabold_italic"
+        android:inputType="textMultiLine"
+        android:text="Descripción del medicamento"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtDuiSolicitud"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNombreCitas" />
+
+    <EditText
+        android:id="@+id/txtDuiSolicitud"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_edittext_background"
+        android:clickable="false"
+        android:ems="10"
+        android:focusable="false"
+        android:fontFamily="@font/raleway_extrabold_italic"
+        android:inputType="none"
+        android:textColorHint="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView27" />
+
+    <Button
+        android:id="@+id/btnEnviarFormulario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="#3BDA51"
+        android:fontFamily="@font/raleway_semibold_italic"
+        android:text="Agregar medicamento"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDuiSolicitud" />
+
+    <Button
+        android:id="@+id/btnAsignarMedicamentos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="#3BDA51"
+        android:fontFamily="@font/raleway_semibold_italic"
+        android:text="Asignar medicamento"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnEnviarFormulario" />
+
+    <Button
+        android:id="@+id/btnCitasAgendadasA"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="#3BDA51"
+        android:fontFamily="@font/raleway_semibold_italic"
+        android:text="Medicamentos"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnPacientes"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+    <Button
+        android:id="@+id/btnPacientes"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="#d6d6d6"
+        android:fontFamily="@font/raleway_semibold_italic"
+        android:text="Pacientes"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/btnCitasAgendadasA"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="411dp"
+        android:layout_height="200dp"
+        android:background="@drawable/ic_fondo_arriba"
+        tools:layout_editor_absoluteY="1dp">
+
+        <ImageView
+            android:id="@+id/ivSmallLogo"
+            android:layout_width="70dp"
+            android:layout_height="69dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.509"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo_bloom" />
 
         <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView11"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="sans-serif"
-            android:text="Nombre del medicamento"
+            android:layout_marginTop="90dp"
+            android:fontFamily="@font/raleway_extrabold_italic"
+            android:text="Registro de medicamentos"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/txtNombreCitas"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnPacientes" />
-
-        <TextView
-            android:id="@+id/textView27"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="sans-serif"
-            android:inputType="textMultiLine"
-            android:text="Descripción del medicamento"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/txtDuiSolicitud"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtNombreCitas" />
-
-        <EditText
-            android:id="@+id/txtDuiSolicitud"
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/ic_edittext_background"
-            android:clickable="false"
-            android:ems="10"
-            android:focusable="false"
-            android:inputType="none"
-            android:textColorHint="@color/black"
-            android:textSize="16sp"
+            android:textSize="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.509"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView27" />
-
-        <Button
-            android:id="@+id/btnEnviarFormulario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:backgroundTint="#3BDA51"
-            android:fontFamily="sans-serif"
-            android:text="Agregar medicamento"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtDuiSolicitud" />
-
-        <Button
-            android:id="@+id/btnAsignarMedicamentos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="#3BDA51"
-            android:fontFamily="sans-serif"
-            android:text="Asignar medicamento"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnEnviarFormulario" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="411dp"
-            android:layout_height="200dp"
-            android:background="@drawable/ic_fondo_arriba"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/ivSmallLogo"
-                android:layout_width="70dp"
-                android:layout_height="69dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/logo_bloom" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="90dp"
-                android:fontFamily="@font/raleway_extrabold_italic"
-                android:text="Registro de medicamentos"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="32dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <Button
-            android:id="@+id/btnCitasAgendadasA"
-            android:layout_width="180dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="19dp"
-            android:backgroundTint="#3BDA51"
-            android:fontFamily="sans-serif"
-            android:text="Medicamentos"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnPacientes"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
-
-        <Button
-            android:id="@+id/btnPacientes"
-            android:layout_width="180dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="19dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="6dp"
-            android:backgroundTint="#d6d6d6"
-            android:fontFamily="sans-serif"
-            android:text="Pacientes"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/btnCitasAgendadasA"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout5"
-        android:background="#CCCCCC"
         android:layout_width="412dp"
         android:layout_height="86dp"
+        android:background="@drawable/fondo_gris"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -200,17 +183,17 @@
 
         <ImageView
             android:id="@+id/ivMenuCircle"
-            android:background="@drawable/ic_circulo_menu"
             android:layout_width="41dp"
             android:layout_height="43dp"
             android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnNoticias"
+            android:background="@drawable/ic_circulo_menu"
+            app:layout_constraintBottom_toTopOf="@+id/btnHome"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.70"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/btnNoticias"
+            android:id="@+id/btnHome"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="100dp"
@@ -221,12 +204,12 @@
             app:srcCompat="@drawable/ic_home" />
 
         <ImageView
-            android:id="@+id/btnCitas"
+            android:id="@+id/btnAgregar"
             android:layout_width="48dp"
             android:layout_height="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnNoticias"
+            app:layout_constraintStart_toEndOf="@+id/btnHome"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.555"
             app:srcCompat="@drawable/ic_active_agregar" />
