--- a/app/src/main/res/layout/activity_ingreso.xml
+++ b/app/src/main/res/layout/activity_ingreso.xml
@@ -10,147 +10,100 @@
 
     <ImageView
         android:id="@+id/IvLogoIsss"
-        android:layout_width="250dp"
-        android:layout_height="272dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:src="@drawable/logo_bloom"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout4"
-        android:background="@drawable/fondo_blanco"
         android:layout_width="333dp"
-        android:layout_height="466dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="280dp"
         android:layout_marginBottom="40dp"
+        android:background="@drawable/fondo_blanco"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/IvLogoIsss">
-
-        <Button
-            android:id="@+id/btnRegistrarseIngresoInterfaz"
-            android:backgroundTint="#CCCCCC"
-            android:layout_width="160dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/btnIniciarSesionIngresoInterfaz"
-            android:backgroundTint="#039117"
-            android:layout_width="165dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif"
-            android:text="Iniciar Sesión"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="145dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif"
-            android:text="Bienvenido a Bloom Salud"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesionIngresoInterfaz" />
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/btnIniciarSesionIngreso"
             android:layout_width="300dp"
             android:layout_height="55dp"
-            android:layout_marginBottom="56dp"
+            android:layout_marginBottom="10dp"
             android:backgroundTint="#039117"
             android:fontFamily="sans-serif"
             android:text="Iniciar Sesión"
+            android:textColor="@color/white"
             android:textSize="18dp"
             android:textStyle="bold"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnCambioContraseñaIngreso"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/btnCambioContraseñaIngreso"
-            android:textColor="#2255A0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="13dp"
+            android:layout_marginBottom="15dp"
             android:fontFamily="sans-serif"
             android:text="¿Olvidaste tu contraseña?"
+            android:textColor="#2255A0"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesionIngreso"
-            app:layout_constraintVertical_bias="0.5" />
-
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:text="Registrarse"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/btnRegistrarseIngresoInterfaz"
-            app:layout_constraintEnd_toEndOf="@+id/btnRegistrarseIngresoInterfaz"
-            app:layout_constraintHorizontal_bias="0.75"
-            app:layout_constraintStart_toStartOf="@+id/btnRegistrarseIngresoInterfaz"
-            app:layout_constraintTop_toTopOf="@+id/btnRegistrarseIngresoInterfaz" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/txtCorreoIngreso"
             android:layout_width="290dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="50dp"
             android:backgroundTint="#E5E5E5"
             android:ems="10"
-            android:fontFamily="sans-serif"
+            android:fontFamily="@font/raleway_semibold_italic"
             android:hint="Correo"
             android:inputType="textEmailAddress"
             android:textColor="#000000"
             android:textColorHint="#c8c8c8"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.488"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/txtContrasenaIngreso"
             android:layout_width="290dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="30dp"
             android:backgroundTint="#E5E5E5"
             android:ems="10"
-            android:fontFamily="sans-serif"
+            android:fontFamily="@font/raleway_semibold_italic"
             android:hint="Contraseña"
             android:inputType="textPassword"
-            android:textColorHint="#c8c8c8"
             android:textColor="#000000"
+            android:textColorHint="#c8c8c8"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtCorreoIngreso" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:fontFamily="@font/raleway_extrabold_italic"
+        android:text="Bienvenido a Bloom Salud"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
