--- a/app/src/main/res/layout/activity_listado_pacientes.xml
+++ b/app/src/main/res/layout/activity_listado_pacientes.xml
@@ -10,10 +10,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:background="@drawable/fondo_gris"
-        android:layout_width="373dp"
-        android:layout_height="96dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="411dp"
+        android:layout_height="200dp"
+        android:background="@drawable/ic_fondo_arriba"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,37 +22,34 @@
             android:id="@+id/ivSmallLogo"
             android:layout_width="70dp"
             android:layout_height="69dp"
-            android:layout_marginStart="28dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.518"
             app:srcCompat="@drawable/logo_bloom" />
 
         <TextView
             android:id="@+id/textView11"
-            android:layout_width="130dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:fontFamily="sans-serif"
+            android:layout_marginTop="100dp"
+            android:fontFamily="@font/raleway_extrabold_italic"
             android:text="Pacientes"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/ivSmallLogo"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout5"
-        android:background="#CCCCCC"
         android:layout_width="412dp"
         android:layout_height="86dp"
+        android:background="@drawable/fondo_gris"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -61,17 +57,17 @@
 
         <ImageView
             android:id="@+id/ivMenuCircle"
-            android:background="@drawable/ic_circulo_menu"
             android:layout_width="41dp"
             android:layout_height="43dp"
             android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnNoticias"
+            android:background="@drawable/ic_circulo_menu"
+            app:layout_constraintBottom_toTopOf="@+id/btnHome"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.28"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/btnNoticias"
+            android:id="@+id/btnHome"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="100dp"
@@ -87,7 +83,7 @@
             android:layout_height="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnNoticias"
+            app:layout_constraintStart_toEndOf="@+id/btnHome"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_agregar" />
 
@@ -95,8 +91,8 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="405dp"
-        android:layout_height="515dp"
+        android:layout_width="410dp"
+        android:layout_height="445dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
