--- a/app/src/main/res/layout/activity_registro_pacientes.xml
+++ b/app/src/main/res/layout/activity_registro_pacientes.xml
@@ -246,10 +246,10 @@
                 android:id="@+id/btnEnviarFormulario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#3BDA51"
-                android:fontFamily="@font/raleway_extrabold_italic"
+                android:fontFamily="@font/raleway_semibold_italic"
                 android:text="Enviar"
                 android:textColor="@color/white"
                 android:textSize="18sp"
@@ -309,28 +309,28 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="19dp"
                 android:backgroundTint="#d6d6d6"
-                android:fontFamily="sans-serif"
-                android:textColor="@color/black"
-                android:textStyle="bold"
+                android:fontFamily="@font/raleway_semibold_italic"
                 android:text="Medicamentos"
+                android:textColor="@color/black"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btnFormularioCitas"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
             <Button
                 android:id="@+id/btnFormularioCitas"
-                android:backgroundTint="#3BDA51"
                 android:layout_width="180dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="19dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="6dp"
-                android:fontFamily="sans-serif"
-                android:textColor="@color/white"
-                android:textStyle="bold"
+                android:backgroundTint="#3BDA51"
+                android:fontFamily="@font/raleway_semibold_italic"
                 android:text="Pacientes"
+                android:textColor="@color/white"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/btnMedicamentos"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
@@ -371,7 +371,7 @@
             app:srcCompat="@drawable/ic_home" />
 
         <ImageView
-            android:id="@+id/btnCitas"
+            android:id="@+id/btnAgregar"
             android:layout_width="48dp"
             android:layout_height="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
