Ya están las cards para el listado de pacientes

--- a/app/src/main/res/layout/activity_listado_pacientes.xml
+++ b/app/src/main/res/layout/activity_listado_pacientes.xml
@@ -95,6 +95,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvPacientes"
         android:layout_width="405dp"
         android:layout_height="515dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
