--- a/app/src/main/res/layout/activity_card_pacientes.xml
+++ b/app/src/main/res/layout/activity_card_pacientes.xml
@@ -11,10 +11,10 @@
     tools:context=".activity_card_pacientes">
 
     <LinearLayout
-        android:backgroundTint="@color/white"
+        android:background="@color/white"
         android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="107dp"
+        android:layout_height="127dp"
         android:orientation="horizontal"
         android:padding="16dp">
 
@@ -27,16 +27,17 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:backgroundTint="@color/white"
+            android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="87dp"
+            android:layout_height="97dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txtDoctorNombre"
+                android:id="@+id/txtPacienteNombre"
                 android:layout_width="203dp"
                 android:layout_height="33dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginStart="16dp"
                 android:paddingLeft="15dp"
                 android:paddingBottom="4dp"
@@ -46,26 +47,44 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.093" />
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="37dp"
-                android:layout_height="35dp"
+                android:layout_width="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="12dp"
-                app:layout_constraintStart_toEndOf="@+id/txtDoctorNombre"
+                app:layout_constraintStart_toEndOf="@+id/txtPacienteNombre"
                 app:srcCompat="@drawable/ic_delete"
-                tools:layout_editor_absoluteY="25dp" />
+                tools:layout_editor_absoluteY="21dp" />
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="37dp"
-                android:layout_height="35dp"
+                android:layout_width="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.304"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:srcCompat="@drawable/ic_edit"
-                tools:layout_editor_absoluteY="25dp" />
+                tools:layout_editor_absoluteY="21dp" />
+
+            <TextView
+                android:id="@+id/txtPacienteApellido"
+                android:layout_width="203dp"
+                android:layout_height="33dp"
+                android:layout_marginTop="8dp"
+                android:paddingLeft="15dp"
+                android:paddingBottom="4dp"
+                android:text="Apellido del Paciente"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/imageView"
+                app:layout_constraintHorizontal_bias="0.571"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtPacienteNombre" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
