--- a/app/src/main/res/layout/activity_asignar_medicamentos.xml
+++ b/app/src/main/res/layout/activity_asignar_medicamentos.xml
@@ -12,10 +12,12 @@
         android:id="@+id/btnRegresar"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="360dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/ic_boton_volver"
         app:layout_constraintBottom_toTopOf="@+id/textView15"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.002"
+        app:layout_constraintStart_toStartOf="parent">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -39,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="70dp"
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/raleway_extrabold_italic"
         android:text="Hora de aplicación"
